// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestComponent should render with maximum props 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onFocus={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    type="text"
    value="monday"
  />
</div>
`;

exports[`TestComponent should render with minimum props 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onFocus={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    type="text"
    value=""
  />
</div>
`;
